--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,5 @@
-<hr />
 <footer>
-  <img src="/logo_sort.png" alt="pompette" class="pompette_logo_black" />
+  <img src="/logo_sort.webp" alt="pompette" class="pompette_logo_black" />
   <p>
     CONTACT US <br /> To get in touch, visit our contact page or write us at support@pompette.dk <br />
     For employment opportunities, see our current vacancies
