--- a/src/pages/aboutus.astro
+++ b/src/pages/aboutus.astro
@@ -17,7 +17,7 @@ import Footer from "../components/Footer.astro";
     <Header />
     <div class="section_1">
       <h2 class="citat1">“We want to make natural wine accessible for all people, keep it simple and at a good price.”</h2>
-      <img class="billede1" src="thebar.png" alt="Billede" />
+      <img class="billede1" src="thebar.webp" alt="Billede" />
     </div>
     <div class="section_2">
       <div class="del_1">
@@ -38,10 +38,10 @@ import Footer from "../components/Footer.astro";
 
     <div class="section_3">
       <div>
-        <img src="red12.png" alt="red figur" class="red_figur" />
+        <img src="red12.webp" alt="red figur" class="red_figur" />
         <p>“Pompette” is a french slang, used to describe when you are sligthy drunk, or as we say in Danish “lettere beruset”.</p>
       </div>
-      <img class="pompette" src="pompette.png" alt="pompette" />
+      <img class="pompette" src="pompette.webp" alt="pompette" />
     </div>
 
     <div class="winemakers">
@@ -59,7 +59,7 @@ import Footer from "../components/Footer.astro";
               wines that are vibrant, expressive, and full of life.
             </p>
           </div>
-          <img src="winemaker1.png" class="winemaker_1-2_3-4" alt="winemaker1" />
+          <img src="winemaker1.webp" class="winemaker_1-2_3-4" alt="winemaker1" />
         </div>
         <div class="grid">
           <div class="winemaker_text">
@@ -69,7 +69,7 @@ import Footer from "../components/Footer.astro";
               approach and dedication to organic practices result in wines that are vibrant, nuanced, and brimming with personality.
             </p>
           </div>
-          <img src="winemaker2.png" alt="winemaker2" class="winemaker_1-2_3-4" />
+          <img src="winemaker2.webp" alt="winemaker2" class="winemaker_1-2_3-4" />
         </div>
       </div>
       <div class="grid">
@@ -81,7 +81,7 @@ import Footer from "../components/Footer.astro";
               that possess exceptional purity and character.
             </p>
           </div>
-          <img src="winemaker3.png" alt="winemaker3" class="winemaker_1-2_3-4" />
+          <img src="winemaker3.webp" alt="winemaker3" class="winemaker_1-2_3-4" />
         </div>
         <div class="grid">
           <div class="winemaker_text">
@@ -91,7 +91,7 @@ import Footer from "../components/Footer.astro";
               that are elegant, balanced, and filled with character.
             </p>
           </div>
-          <img src="winemaker4.png" alt="winemaker4" class="winemaker_1-2_3-4" />
+          <img src="winemaker4.webp" alt="winemaker4" class="winemaker_1-2_3-4" />
         </div>
       </div>
     </div>
@@ -192,8 +192,8 @@ import Footer from "../components/Footer.astro";
       }
 
       .winemakers img {
-        margin: 0% 0% 4% 13%;
-        width: 70%;
+        margin: 0% 0% 0% 20%;
+        width: 60%;
       }
       .forsvind {
         display: none;
@@ -311,6 +311,10 @@ import Footer from "../components/Footer.astro";
       .winemakers_p {
         margin-right: 40%;
         margin-bottom: 3.5%;
+      }
+      .winemakers img {
+        margin: 0% 0% 4% 0%;
+        width: 75%;
       }
     }
   </style>
