--- a/src/pages/thebar.astro
+++ b/src/pages/thebar.astro
@@ -25,7 +25,7 @@ import Footer from "../components/Footer.astro";
           favorite wines or explore new and exciting flavors. Whether you're seeking a memorable evening out or a place to unwind with friends, Pompette promises an extraordinary experience for all wine lovers.
         </p>
       </div>
-      <img class="thebar" src="../../public/TheBar-Image.png" alt="Image inside the wine bar" />
+      <img class="thebar" src="../../public/TheBar-Image.webp" alt="Image inside the wine bar" />
 
       <div class="winemenu">
         <div class="col_1_1">
@@ -42,16 +42,16 @@ import Footer from "../components/Footer.astro";
             </div>
           </div>
           <div class="quote">
-            <img class="citation" src="../../public/citation.png" alt="" />
+            <img class="citation" src="../../public/citation.webp" alt="" />
             <h2>“Pompette is all about wine for the people. Whether you’re a hard-core natural wine nerd or simply curious, we have something for you.”</h2>
           </div>
         </div>
         <section class="center_grid">
           <div class="image_grid">
-            <img class="grid_images" src="../../public/thebar_1.jpg" alt="Girl enjoying wine and snacks" />
-            <img class="grid_images" src="../../public/thebar_2.jpg" alt="Girls enjoying wine" />
-            <img class="grid_images" src="../../public/thebar_3.jpg" alt="Girls enjoying wine outside" />
-            <img class="grid_images" src="../../public/thebar_4.jpg" alt="Wine and flowers" />
+            <img class="grid_images" src="../../public/thebar_1.webp" alt="Girl enjoying wine and snacks" />
+            <img class="grid_images" src="../../public/thebar_2.webp" alt="Girls enjoying wine" />
+            <img class="grid_images" src="../../public/thebar_3.webp" alt="Girls enjoying wine outside" />
+            <img class="grid_images" src="../../public/thebar_4.webp" alt="Wine and flowers" />
           </div>
         </section>
       </div>
