--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,14 +1,17 @@
 <nav class="navbar">
   <a href="/">
-    <img src="/logo_roed.png" alt="pompette" />
+    <img src="/logo_roed.webp" alt="pompette" />
   </a>
   <ul class="nav-menu">
     <li class="nav-item">
       <div class="dropdown">
-        <button class="dropbtn"> <a href="/listeview">Shop</a></button>
-        <div class="dropdown-content">
+        <div class="grid_1-1">
+          <a id="shop" class="dropbtn" href="/listeview">Shop</a>
+          <p class="menu-arrow">↓</p>
+        </div>
+        <div class="sub-menu">
           <a href="/listeview">Wine</a>
-          <a href="/listeview">Not wine</a>
+          <a href="/notwine">Not wine</a>
         </div>
       </div>
     </li>
@@ -18,11 +21,6 @@
     <li class="nav-item">
       <div class="dropdown">
         <button class="dropbtn"> <a href="/aboutus">About Us</a></button>
-        <div class="dropdown-content">
-          <a href="/aboutus">The Concept</a>
-          <a href="/aboutus">The Winemakers</a>
-          <a href="/aboutus">The People</a>
-        </div>
       </div>
     </li>
   </ul>
@@ -71,6 +69,10 @@
     color: black;
   }
   /* Dropdown Button */
+  .grid_1-1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
   .dropbtn {
     color: #ff0000;
     font-family: century-gothic, sans-serif;
@@ -80,28 +82,30 @@
     background-color: white;
     font-size: 16px;
   }
+
   .dropdown {
     position: relative;
     display: inline-block;
   }
-  .dropdown-content {
+
+  .sub-menu {
     display: none;
-    position: absolute;
-    min-width: 160px;
-    z-index: 1;
+    text-align: left;
+    margin: 5% 0% 0% 0%;
   }
-  .dropdown-content a {
-    color: rgb(195, 195, 195);
-    text-decoration: none;
-    display: block;
+  .sub-menu a {
+    color: rgb(148, 148, 148);
   }
 
-  .dropdown-content a:hover {
-    color: black;
+  .sub-menu.open {
+    display: flex;
+    flex-direction: column;
+    color: $darkblue-headingtext;
   }
-
-  .dropdown:hover .dropdown-content {
-    display: block;
+  .menu-arrow {
+    color: #ff0000;
+    margin: 9% 0% 0% 20%;
+    cursor: pointer;
   }
   .hamburger {
     display: none;
@@ -158,6 +162,20 @@
     .hamburger.active .bar:nth-child(3) {
       transform: translateY(-8px) rotate(-45deg);
     }
+
+    .menu-arrow {
+      color: #ff0000;
+      margin: 10% 0% 0% 30%;
+      cursor: pointer;
+    }
+    #shop {
+      margin-left: 35%;
+    }
+    .sub-menu {
+      display: none;
+      text-align: center;
+      margin: 5% 0% 0% -10%;
+    }
   }
 </style>
 <script>
@@ -179,4 +197,12 @@
     hamburger.classList.remove("active");
     navMenu.classList.remove("active");
   }
+  const arrowButton = document.querySelectorAll(".menu-arrow");
+  const subMenu = document.querySelector(".sub-menu");
+
+  arrowButton.forEach((el) =>
+    el.addEventListener("click", () => {
+      subMenu.classList.toggle("open");
+    })
+  );
 </script>
