--- a/src/pages/listeview.astro
+++ b/src/pages/listeview.astro
@@ -30,7 +30,7 @@ const data = await fetch("https://bnppmezjjsymjjfbqyse.supabase.co/rest/v1/Pompe
         <h1>Favorite flavors of the month</h1>
         <p>Every month, we pick out our favorite flavors of each grape and share why we love it. That way, you know exactly which drink you should go for when you visit us.</p>
       </div>
-      <img class="blomst_splash" src="/blomstersplash_red.png" alt="Image inside the wine bar" />
+      <img class="blomst_splash" src="/blomstersplash_red.webp" alt="Image inside the wine bar" />
       {data.map((wine) => <Card link={"/wine/" + wine.id} picture={`/${wine.picture}`} picture2={`/${wine.picture2}`} name={wine.name} type={wine.type} love={wine.love} link={"/singleview/" + wine.slug} />)}
     </main>
     <Footer />
