--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -96,6 +96,9 @@
   .sub-menu a {
     color: rgb(148, 148, 148);
   }
+  .sub-menu a:hover {
+    color: rgb(80, 80, 80);
+  }
 
   .sub-menu.open {
     display: flex;
