--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,8 +49,8 @@ import Footer from "../components/Footer.astro";
           <h1 class="feeling">Feeling <em>"Pompette"</em>?</h1>
           <div class="image-container">
             <a target="”_blank”" href="https://www.instagram.com/pompettecph/">
-              <img class="hover" src="/insta_knap_hover.svg" alt="instagram" />
-              <img class="insta_knap" src="/insta_knap.svg" alt="instagram" />
+              <img class="hover" src="/insta-knap-hover.webp" alt="instagram" />
+              <img class="insta_knap" src="/insta-knap.webp" alt="instagram" />
             </a>
           </div>
         </div>
