--- a/src/pages/singleview.astro
+++ b/src/pages/singleview.astro
@@ -48,8 +48,8 @@ const { wine } = Astro.props;
           <p>Type: {wine.type}</p>
           <p>Size: {wine.size}</p>
           <div class="image-container">
-            <img class="hover" src="/add_knap_hover.svg" alt="instagram" />
-            <img class="insta_knap" src="/add_knap.svg" alt="instagram" />
+            <img class="hover" src="/add-knap-hover.webp" alt="instagram" />
+            <img class="insta_knap" src="/add-knap.webp" alt="instagram" />
           </div>
         </section>
       </div>
