--- a/src/pages/thebar.astro
+++ b/src/pages/thebar.astro
@@ -37,8 +37,8 @@ import Footer from "../components/Footer.astro";
             </p>
             <p>Interested in this month’s favorites? We got you covered.</p>
             <div class="image-container">
-              <img class="hover" src="/tell_me_more_knap_hover.svg" alt="instagram" />
-              <img class="insta_knap" src="/tell_me_more_knap.svg" alt="instagram" />
+              <img class="hover" src="/tell-me-more-knap-hover.webp" alt="instagram" />
+              <img class="insta_knap" src="/tell-me-more-knap.webp" alt="instagram" />
             </div>
           </div>
           <div class="quote">
