--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,10 +5,7 @@
   <ul class="nav-menu">
     <li class="nav-item">
       <div class="dropdown">
-        <div class="grid_1-1">
-          <a id="shop" class="dropbtn" href="/listeview">Shop</a>
-          <p class="menu-arrow">↓</p>
-        </div>
+        <a id="shop" class="menu-arrow">Shop ↓</a>
         <div class="sub-menu">
           <a href="/listeview">Wine</a>
           <a href="/notwine">Not wine</a>
@@ -109,6 +106,9 @@
     color: #ff0000;
     margin: 9% 0% 0% 20%;
     cursor: pointer;
+  }
+  .menu-arrow:hover {
+    color: black;
   }
   .hamburger {
     display: none;
