--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -31,8 +31,8 @@ const { id, picture, picture2, name, type, love, link } = Astro.props;
             <div>
               <a href={link}>
                 <div class="image-container">
-                  <img class="hover" src="/tell-me-more-knap-hover.webp" alt="instagram" />
-                  <img class="insta_knap" src="/tell-me-more-knap.webp" alt="instagram" />
+                  <img class="hover" src="/tell-me-more-knap-hover.webp" alt="tell me more" />
+                  <img class="insta_knap" src="/tell-me-more-knap.webp" alt="tell me more" />
                 </div>
               </a>
             </div>
