--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,7 +13,7 @@
       </div>
     </li>
     <li class="nav-item">
-      <a href="/thebar">The Bar</a>
+      <a href="/thebar">The Winebar</a>
     </li>
     <li class="nav-item">
       <div class="dropdown">
