--- a/src/pages/thebar.astro
+++ b/src/pages/thebar.astro
@@ -37,8 +37,10 @@ import Footer from "../components/Footer.astro";
             </p>
             <p>Interested in this month’s favorites? We got you covered.</p>
             <div class="image-container">
-              <img class="hover" src="/tell-me-more-knap-hover.webp" alt="tell me more" />
-              <img class="insta_knap" src="/tell-me-more-knap.webp" alt="tell me more" />
+              <a href="/listeview">
+                <img class="hover" src="/tell-me-more-knap-hover.webp" alt="tell me more" />
+                <img class="insta_knap" src="/tell-me-more-knap.webp" alt="tell me more" />
+              </a>
             </div>
           </div>
           <div class="quote">
