--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import Footer from "../components/Footer.astro";
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
+    <meta name="keywords" content="wine, winebar, vinbar, wineshop, vinshop, naturvin" />
     <title>Astro</title>
     <link rel="stylesheet" href="https://use.typekit.net/ncl1pci.css" />
     <link rel="stylesheet" href="https://use.typekit.net/ncl1pci.css" />
