--- a/src/pages/aboutus.astro
+++ b/src/pages/aboutus.astro
@@ -17,7 +17,7 @@ import Footer from "../components/Footer.astro";
     <Header />
     <div class="section_1">
       <h2 class="citat1">“We want to make natural wine accessible for all people, keep it simple and at a good price.”</h2>
-      <img class="billede1" src="/thebar.webp" alt="Billede" />
+      <img class="billede1" src="../thebar.webp" alt="Billede" />
     </div>
     <div class="section_2">
       <div class="del_1">
