--- a/src/pages/aboutus.astro
+++ b/src/pages/aboutus.astro
@@ -10,8 +10,8 @@ import Footer from "../components/Footer.astro";
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>about us</title>
-    <link rel="stylesheet" href="https://use.typekit.net/sit4hmp.css" />
-    <link rel="stylesheet" href="https://use.typekit.net/sit4hmp.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/sit4hmp.css&display=swap" />
+    <link rel="stylesheet" href="https://use.typekit.net/sit4hmp.css&display=swap" />
   </head>
   <body>
     <Header />
