--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,10 +9,10 @@ import Footer from "../components/Footer.astro";
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <meta name="keywords" content="wine, winebar, vinbar, wineshop, vinshop, naturvin" />
+    <meta name="keywords" content="wine, winebar, vinbar, wineshop, vinshop, naturvin, natural wine, local, local wine, organic" />
     <title>Astro</title>
-    <link rel="stylesheet" href="https://use.typekit.net/ncl1pci.css" />
-    <link rel="stylesheet" href="https://use.typekit.net/ncl1pci.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/ncl1pci.css&display=swap" />
+    <link rel="stylesheet" href="https://use.typekit.net/ncl1pci.css&display=swap" />
   </head>
   <body>
     <Header />
@@ -97,7 +97,7 @@ import Footer from "../components/Footer.astro";
         grid-column: span 2;
         grid-row: 1;
         font-family: "athena", sans-serif;
-        font-weight: 100;
+        font-weight: 500;
         font-size: 22px;
         margin: 3% 0% 3% 0%;
       }
@@ -111,8 +111,8 @@ import Footer from "../components/Footer.astro";
       .hero-video {
         mask: url("/mask.svg") no-repeat center / contain;
         -webkit-mask: url("/mask.svg") no-repeat center / contain;
-        width: 155%;
-        margin: -9% 0% -12% -27%;
+        width: 100%;
+        margin: -9% 0% -12% 0%;
 
         z-index: 1;
       }
@@ -229,7 +229,7 @@ import Footer from "../components/Footer.astro";
       .no_res {
         margin-top: 7%;
         font-family: "athena", sans-serif;
-        font-weight: 100;
+        font-weight: 500;
         font-size: 30px;
       }
 
