--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -10,8 +10,8 @@ const { id, picture, picture2, name, type, love, link } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>Astro</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://use.typekit.net/sit4hmp.css" />
-    <link rel="stylesheet" href="https://use.typekit.net/sit4hmp.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/sit4hmp.css&display=swap" />
+    <link rel="stylesheet" href="https://use.typekit.net/sit4hmp.css&display=swap" />
   </head>
   <body>
     <main>
@@ -31,8 +31,8 @@ const { id, picture, picture2, name, type, love, link } = Astro.props;
             <div>
               <a href={link}>
                 <div class="image-container">
-                  <img class="hover" src="/tell-me-more-knap-hover.webp" alt="tell me more" />
-                  <img class="insta_knap" src="/tell-me-more-knap.webp" alt="tell me more" />
+                  <img class="hover" src="/tell_me_more_knap_hover.svg" alt="instagram" />
+                  <img class="insta_knap" src="/tell_me_more_knap.svg" alt="instagram" />
                 </div>
               </a>
             </div>
