--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,8 +11,8 @@ import Footer from "../components/Footer.astro";
     <meta name="generator" content={Astro.generator} />
     <meta name="keywords" content="wine, winebar, vinbar, wineshop, vinshop, naturvin, natural wine, local, local wine, organic" />
     <title>Astro</title>
-    <link rel="stylesheet" href="https://use.typekit.net/ncl1pci.css&display=swap" />
-    <link rel="stylesheet" href="https://use.typekit.net/ncl1pci.css&display=swap" />
+    <link rel="stylesheet" href="https://use.typekit.net/ncl1pci.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/ncl1pci.css" />
   </head>
   <body>
     <Header />
