--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Footer from "../components/Footer.astro";
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <meta name="keywords" content="wine, winebar, vinbar, wineshop, vinshop, naturvin, natural wine, local, local wine, organic" />
-    <title>Astro</title>
+    <title>Pompette</title>
     <link rel="stylesheet" href="https://use.typekit.net/ncl1pci.css" />
     <link rel="stylesheet" href="https://use.typekit.net/ncl1pci.css" />
   </head>
