--- a/src/pages/aboutus.astro
+++ b/src/pages/aboutus.astro
@@ -9,7 +9,7 @@ import Footer from "../components/Footer.astro";
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>about us</title>
+    <title>Pompette</title>
     <link rel="stylesheet" href="https://use.typekit.net/sit4hmp.css" />
     <link rel="stylesheet" href="https://use.typekit.net/sit4hmp.css" />
   </head>
