--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -31,8 +31,8 @@ const { id, picture, picture2, name, type, love, link } = Astro.props;
             <div>
               <a href={link}>
                 <div class="image-container">
-                  <img class="hover" src="../../tell_me_more_knap_hover.webp" alt="tell me more" />
-                  <img class="insta_knap" src="../../tell_me_more_knap.webp" alt="tell me more" />
+                  <img class="hover" src="/tell_me_more_knap_hover.webp" alt="tell me more" />
+                  <img class="insta_knap" src="/tell_me_more_knap.webp" alt="tell me more" />
                 </div>
               </a>
             </div>
