--- a/src/pages/singleview/[slug].astro
+++ b/src/pages/singleview/[slug].astro
@@ -48,8 +48,8 @@ const { wine } = Astro.props;
           <p>Type: {wine.type}</p>
           <p>Size: {wine.size} ml</p>
           <div class="image-container">
-            <img class="hover" src="/add_knap_hover.webp" alt="add to basket" />
-            <img class="insta_knap" src="/add_knap.webp" alt="add to basket" />
+            <img class="hover" src="../../../add_knap_hover.webp" alt="add to basket" />
+            <img class="insta_knap" src="../../../add_knap.webp" alt="add to basket" />
           </div>
         </section>
       </div>
