--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -30,8 +30,8 @@ const { id, picture, picture2, name, type, love, link } = Astro.props;
             <div>
               <a href={link}>
                 <div class="image-container">
-                  <img class="hover" src="../../public/tell-me-more-knap-hover.webp" alt="tell me mare" />
-                  <img class="knap" src="../../public/tell-me-more-knap.webp" alt="tell me mare" />
+                  <img class="hover" src="/../../public/tell-me-more-knap-hover.webp" alt="tell me mure" />
+                  <img class="knap" src="/../../public/tell-me-more-knap.webp" alt="tell me mure" />
                 </div>
               </a>
             </div>
