--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -30,8 +30,8 @@ const { id, picture, picture2, name, type, love, link } = Astro.props;
             <div>
               <a href={link}>
                 <div class="image-container">
-                  <img class="hover" src="/../../../tell-me-more-knap-hover.webp" alt="tell me mire" />
-                  <img class="knap" src="/../../../tell-me-more-knap.webp" alt="tell me mire" />
+                  <img class="hover" src="/../../../tell-me-more-knap-hover.webp" alt="tell me more" />
+                  <img class="knap" src="/../../../tell-me-more-knap.webp" alt="tell me more" />
                 </div>
               </a>
             </div>
