--- a/src/pages/singleview/[slug].astro
+++ b/src/pages/singleview/[slug].astro
@@ -49,7 +49,7 @@ const { wine } = Astro.props;
           <p>Size: {wine.size} ml</p>
           <div class="image-container">
             <img class="hover" src="/../../../../add-knap-hover.webp" alt="add to baske" />
-            <img class="insta_knap" src="/../../../../public/add-knap.webp" alt="add to baske" />
+            <img class="insta_knap" src="/../../../../add-knap.webp" alt="add to baske" />
           </div>
         </section>
       </div>
