--- a/src/pages/listeview.astro
+++ b/src/pages/listeview.astro
@@ -17,6 +17,7 @@ const data = await fetch("https://bnppmezjjsymjjfbqyse.supabase.co/rest/v1/Pompe
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
+    <meta name="keywords" content="wine, winebar, vinbar, wineshop, vinshop, naturvin, natural wine, local, local wine, organic wine, organic, vinbar københavn, vinbar nørrebro, winebar copenhagen" />
     <title>Pompette</title>
     <link rel="stylesheet" href="https://use.typekit.net/sit4hmp.css" />
     <link rel="stylesheet" href="https://use.typekit.net/sit4hmp.css" />
