--- a/src/pages/singleview/[slug].astro
+++ b/src/pages/singleview/[slug].astro
@@ -25,9 +25,10 @@ const { wine } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
+    <meta name="keywords" content="wine, winebar, vinbar, wineshop, vinshop, naturvin, natural wine, local, local wine, organic wine, organic, vinbar københavn, vinbar nørrebro, winebar copenhagen" />
     <link rel="stylesheet" href="https://use.typekit.net/ncl1pci.css" />
     <link rel="stylesheet" href="https://use.typekit.net/ncl1pci.css" />
-    <title>Singleview</title>
+    <title>Pompette</title>
   </head>
   <Header />
   <main>
