--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -8,6 +8,7 @@ const { id, picture, picture2, name, type, love, link } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
+    <meta name="keywords" content="wine, winebar, vinbar, wineshop, vinshop, naturvin, natural wine, local, local wine, organic wine, organic, vinbar københavn, vinbar nørrebro, winebar copenhagen" />
     <title>Pompette</title>
     <link rel="stylesheet" href="https://use.typekit.net/sit4hmp.css" />
     <link rel="stylesheet" href="https://use.typekit.net/sit4hmp.css" />
