--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -68,9 +68,9 @@ import Footer from "../components/Footer.astro";
     </main>
     <Footer />
   </body>
-
   <style>
     @media only screen and (max-width: 700px) {
+      /* ----- De roterende vinflasker ----- */
       .rotate-image {
         transform-origin: center center;
         transition: transform 0.2s;
@@ -80,6 +80,7 @@ import Footer from "../components/Footer.astro";
       .rotate-image2 {
         display: none;
       }
+      /* ----------------------------------- */
       .grid {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -108,14 +109,15 @@ import Footer from "../components/Footer.astro";
         grid-column: 2;
         grid-row: 2;
       }
+      /* ----- "Masken" til forsidevideoen ----- */
       .hero-video {
         mask: url("/mask.svg") no-repeat center / contain;
         -webkit-mask: url("/mask.svg") no-repeat center / contain;
         width: 100%;
         margin: -6% 0% -10% 0%;
-
         z-index: 1;
       }
+      /* ----------------------------------- */
       h1 {
         font-family: "athena", sans-serif;
         font-weight: 400;
@@ -145,6 +147,7 @@ import Footer from "../components/Footer.astro";
       .insta4 {
         width: 49%;
       }
+      /* ----- Go to Instagram knap ----- */
       .image-container {
         position: relative;
         width: 150px;
@@ -176,6 +179,8 @@ import Footer from "../components/Footer.astro";
       .image-container:hover .hover-image {
         display: block;
       }
+      /* ----------------------------------- */
+      /* ----------- Nyhedsbrev ------------ */
       input {
         background-color: #f4f2f2;
         border: black solid 1px;
@@ -200,6 +205,7 @@ import Footer from "../components/Footer.astro";
         color: #ff0000;
         border: solid 1px #ff0000;
       }
+      /* ----------------------------------- */
       .grid_1-5-1 {
         display: grid;
         grid-template-columns: 1fr 5fr 1fr;
@@ -231,10 +237,10 @@ import Footer from "../components/Footer.astro";
         font-weight: 500;
         font-size: 30px;
       }
-
       .aabningstider {
         margin-top: 5%;
       }
+      /* ----- "Masken" til forsidevideoen ----- */
       .hero-video {
         mask: url("/mask.svg") no-repeat center / contain;
         -webkit-mask: url("/mask.svg") no-repeat center / contain;
@@ -242,6 +248,7 @@ import Footer from "../components/Footer.astro";
         margin: -6% 0% 0% 0%;
         z-index: 1;
       }
+      /* --------------------------------------- */
       h1 {
         font-family: "athena", sans-serif;
         font-weight: 400;
@@ -297,13 +304,13 @@ import Footer from "../components/Footer.astro";
         margin-right: 25%;
         line-height: 1.5em;
       }
+      /* ----- Go to Instagram knap ----- */
       .image-container {
         position: relative;
         width: 170px;
         height: 140px;
         margin: 7% 0% 0% 27%;
       }
-
       .image-container img {
         width: 100%;
         height: 100%;
@@ -311,11 +318,9 @@ import Footer from "../components/Footer.astro";
         top: 0;
         left: 0;
       }
-
       .image-container img:hover {
         opacity: 0;
       }
-
       .image-container .hover-image {
         display: none;
         width: 100%;
@@ -324,10 +329,11 @@ import Footer from "../components/Footer.astro";
         top: 0;
         left: 0;
       }
-
       .image-container:hover .hover-image {
         display: block;
       }
+      /* --------------------------------------- */
+      /* ----------- Nyhedsbrev ------------ */
       input {
         background-color: #f4f2f2;
         border: black solid 1px;
@@ -351,6 +357,7 @@ import Footer from "../components/Footer.astro";
         color: #ff0000;
         border: solid 1px black;
       }
+      /* --------------------------------------- */
       .grid_1-5-1 {
         display: grid;
         grid-template-columns: 2fr 2fr 2fr 1fr;
@@ -363,6 +370,7 @@ import Footer from "../components/Footer.astro";
         font-size: 14px;
         line-height: 1.5em;
       }
+      /* ----- Den roterende vinflaske ----- */
       .rotate-image {
         transform-origin: center center;
         transition: transform 0.2s;
@@ -375,18 +383,24 @@ import Footer from "../components/Footer.astro";
         margin: -5% 0% -7% 4%;
         width: 20%;
       }
+      /* --------------------------------------- */
     }
   </style>
   <script>
+    /* ----- Den roterende vinflaske 1 ----- */
     window.addEventListener("scroll", function () {
       var rotation = window.pageYOffset / 3; // Adjust the divisor to control the rotation speed
       var image = document.getElementById("my-image");
       image.style.transform = "rotate(" + rotation + "deg)";
     });
+    /* ------------------------------------ */
+
+    /* ----- Den roterende vinflaske 2 ----- */
     window.addEventListener("scroll", function () {
       var rotation = window.pageYOffset / 3; // Adjust the divisor to control the rotation speed
       var image = document.getElementById("my-image2");
       image.style.transform = "rotate(" + rotation + "deg)";
     });
+    /* ------------------------------------ */
   </script>
 </html>
