--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -136,6 +136,7 @@ const { id, picture, picture2, name, type, love, link } = Astro.props;
     }
     .overskrift {
       margin: 0% 0% 2% 0%;
+      font-size: 18px;
     }
     .beskrivelse {
       margin-top: 15%;
