--- a/src/pages/listeview.astro
+++ b/src/pages/listeview.astro
@@ -9,6 +9,10 @@ const data = await fetch("https://bnppmezjjsymjjfbqyse.supabase.co/rest/v1/Pompe
     apikey: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImJucHBtZXpqanN5bWpqZmJxeXNlIiwicm9sZSI6ImFub24iLCJpYXQiOjE2ODQ0MTM5NDksImV4cCI6MTk5OTk4OTk0OX0.QKzx0IPHBKonSSjH8S7r8lllC8IldDTgaP7clAxevi4",
   },
 }).then((response) => response.json());
+
+function getFirstNChars(str, length) {
+  return str.substring(0, length);
+}
 ---
 
 <html lang="en">
@@ -31,7 +35,7 @@ const data = await fetch("https://bnppmezjjsymjjfbqyse.supabase.co/rest/v1/Pompe
         <p>Every month, we pick out our favorite flavors of each grape and share why we love it. That way, you know exactly which drink you should go for when you visit us.</p>
       </div>
       <img class="blomst_splash" src="/blomstersplash_red.webp" alt="Image inside the wine bar" />
-      {data.map((wine) => <Card link={"/wine/" + wine.id} picture={`/${wine.picture}`} picture2={`/${wine.picture2}`} name={wine.name} type={wine.type} love={wine.love} link={"/singleview/" + wine.slug} />)}
+      {data.map((wine) => <Card link={"/wine/" + wine.id} picture={`/${wine.picture}`} picture2={`/${wine.picture2}`} name={wine.name} type={wine.type} text={getFirstNChars(wine.text, 200) + "..."} love={wine.love} link={"/singleview/" + wine.slug} />)}
     </main>
     <Footer />
   </body>
