--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -41,7 +41,7 @@
     grid-template-columns: 5fr 3fr;
     padding: 2em;
   }
-  img {
+  .navbar img {
     width: 20%;
     margin-top: -2%;
   }
@@ -127,8 +127,9 @@
     display: grid;
     grid-template-columns: 1fr 1.28fr 1fr;
   }
+
   @media only screen and (max-width: 700px) {
-    img {
+    .navbar img {
       width: 60%;
     }
     .nav-menu {
