--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -15,7 +15,7 @@ const { id, picture, picture2, name, type, love, link, text } = Astro.props;
   </head>
   <body>
     <main>
-      <h1>This month's <span>{type}</span></h1>
+      <h1 class="tm">This month's <span>{type}</span></h1>
       <div class="grid_2">
         <div class="grid_1-1">
           <img src={picture2} alt="" />
@@ -44,6 +44,7 @@ const { id, picture, picture2, name, type, love, link, text } = Astro.props;
       display: grid;
       grid-template-columns: 1fr 1fr;
       margin-right: 15%;
+      margin-left: 5%;
       gap: 3%;
     }
     .grid1-1 {
@@ -60,20 +61,26 @@ const { id, picture, picture2, name, type, love, link, text } = Astro.props;
       font-weight: 600;
       font-style: normal;
       font-size: 45px;
+
       margin-bottom: 3%;
-      line-height: 1.5em;
+      margin-right: 15%;
+      margin-left: 5%;
       color: #ff0000;
+    }
+    .beskrivelse {
+      margin-right: 15%;
+      margin-left: 5%;
     }
     .overskrift {
       color: #ff0000;
-      margin: 5% 0% 0% 10%;
     }
     .image-container {
       position: relative;
       width: 170px;
       height: 140px;
-      margin: 40% 0% 10% -20%;
+      margin-top: 5%;
       cursor: pointer;
+      margin-bottom: 15%;
     }
 
     .image-container img {
