--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -21,7 +21,7 @@
       </div>
     </li>
     <li>
-      <img class="cart" src="/shopping_cart.svg" alt="" />
+      <img class="cart" src="/cart_red.svg" alt="" />
     </li>
   </ul>
   <div class="hamburger">
@@ -33,7 +33,9 @@
 
 <style>
   .cart {
-    weight: 100;
+    width: 30%;
+    margin-top: -2%;
+    cursor: pointer;
   }
   .navbar {
     position: sticky;
