--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -190,6 +190,7 @@ import Footer from "../components/Footer.astro";
         padding: 0.75em;
         margin-bottom: 5%;
         grid-column: 2;
+        font-family: century-gothic, sans-serif;
       }
 
       button {
@@ -201,6 +202,7 @@ import Footer from "../components/Footer.astro";
         border: solid 1px black;
         color: white;
         cursor: pointer;
+        font-family: century-gothic, sans-serif;
       }
       button:hover {
         background-color: #f4f2f2;
@@ -344,6 +346,7 @@ import Footer from "../components/Footer.astro";
         color: rgb(0, 0, 0);
         padding: 1em;
         margin: 0% 20% 0% 20%;
+        font-family: century-gothic, sans-serif;
       }
       button {
         text-align: left;
@@ -355,6 +358,7 @@ import Footer from "../components/Footer.astro";
         cursor: pointer;
         margin-left: -36%;
         margin-right: 100%;
+        font-family: century-gothic, sans-serif;
       }
       button:hover {
         background-color: #f4f2f2;
