--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -39,7 +39,6 @@
   }
   .navbar {
     position: sticky;
-    top: 0;
     background-color: white;
     padding-left: 0px;
     z-index: 100;
@@ -52,6 +51,7 @@
   .navbar .logo {
     width: 20%;
     margin-top: -2%;
+    margin-left: 2%;
   }
 
   ul {
