--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -214,7 +214,6 @@ import Footer from "../components/Footer.astro";
         display: grid;
         grid-template-columns: 1fr 5fr 1fr;
         line-height: 1.5em;
-        font-size: 14px;
       }
       .brodtekst2 {
         margin: 10% 0% 10% 0%;
@@ -345,7 +344,7 @@ import Footer from "../components/Footer.astro";
         border: black solid 1px;
         color: rgb(0, 0, 0);
         padding: 1em;
-        margin: 0% 20% 0% 20%;
+        width: 15%;
         font-family: century-gothic, sans-serif;
       }
       button {
@@ -356,8 +355,6 @@ import Footer from "../components/Footer.astro";
         border: solid 1px black;
         color: white;
         cursor: pointer;
-        margin-left: -36%;
-        margin-right: 100%;
         font-family: century-gothic, sans-serif;
       }
       button:hover {
@@ -367,11 +364,11 @@ import Footer from "../components/Footer.astro";
       }
       /* --------------------------------------- */
       .grid_1-5-1 {
-        display: grid;
-        grid-template-columns: 2fr 2fr 2fr 1fr;
-        margin-left: 5%;
+        display: flex;
         line-height: 1.5em;
         font-size: 14px;
+        gap: 20px;
+        justify-content: center;
       }
       .brodtekst2 {
         margin: 5% 30% 5% 30%;
