--- a/src/pages/aboutus.astro
+++ b/src/pages/aboutus.astro
@@ -40,7 +40,7 @@ import Footer from "../components/Footer.astro";
     <div class="section_3">
       <div>
         <img src="../red12.webp" alt="red figur" class="red_figur" />
-        <p>“Pompette” is a french slang, used to describe when you are sligthy drunk, or as we say in Danish “lettere beruset”.</p>
+        <p class="citat2">“Pompette” is a french slang, used to describe when you are sligthy drunk, or as we say in Danish “lettere beruset”.</p>
       </div>
       <img class="pompette" src="../pompette.webp" alt="pompette" />
     </div>
@@ -140,7 +140,7 @@ import Footer from "../components/Footer.astro";
 
       .section_3 p {
         position: absolute;
-        margin-top: -38%;
+        margin-top: -41%;
         margin-left: 19%;
         margin-right: 20%;
         font-size: 12px;
@@ -232,9 +232,9 @@ import Footer from "../components/Footer.astro";
         font-family: athena, sans-serif;
         font-weight: lighter;
         margin: 10% 20% 0% 25%;
-        margin-bottom: 7%;
+        margin-bottom: 15%;
         font-size: 25px;
-        z-index: -1;
+        z-index: 1;
       }
 
       .billede1 {
