--- a/src/pages/aboutus.astro
+++ b/src/pages/aboutus.astro
@@ -140,7 +140,7 @@ import Footer from "../components/Footer.astro";
 
       .section_3 p {
         position: absolute;
-        margin-top: -41%;
+        margin-top: -38%;
         margin-left: 19%;
         margin-right: 20%;
         font-size: 12px;
@@ -148,7 +148,9 @@ import Footer from "../components/Footer.astro";
         text-align: center;
         font-family: century-gothic, sans-serif;
       }
-
+      .citat2 {
+        margin-top: -12%;
+      }
       .red_figur {
         margin-left: 10%;
         width: 80%;
