--- a/src/pages/thebar.astro
+++ b/src/pages/thebar.astro
@@ -19,13 +19,13 @@ import Footer from "../components/Footer.astro";
     <Header />
     <main>
       <div class="banner">
-        <h1>The Bar</h1>
+        <h1>The Winebar</h1>
         <p>
           Located in the heart of Denmark, Pompette offers a captivating atmosphere where wine enthusiasts can indulge in a carefully curated selection of exceptional wines. The warm and inviting ambiance, combined with attentive service, creates an enchanting space where guests can enjoy their
           favorite wines or explore new and exciting flavors. Whether you're seeking a memorable evening out or a place to unwind with friends, Pompette promises an extraordinary experience for all wine lovers.
         </p>
       </div>
-      <img class="thebar" src="../../TheBar-Image.webp" alt="Image inside the wine bar" />
+      <img class="thebar" src="../../the-bar-image.webp" alt="Image inside the wine bar" />
 
       <div class="winemenu">
         <div class="col_1_1">
